Primera parte - ViewModel Read JSON

--- a/M2E1NETCore_MVC_Hello/Views/Security/Login.cshtml
+++ b/M2E1NETCore_MVC_Hello/Views/Security/Login.cshtml
@@ -12,24 +12,26 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    
+    <br />
+    <br />
+    <br />
     <div class="container col-md-3">
         <h3>Login</h3>
 
-        <form>
+        <form method="post" action="/Security/Login">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" name="Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>         
+                <input type="password" name="Password" class="form-control" id="exampleInputPassword1">
+            </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
 
-    </div>    
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
